# http-mcp-bridge

./: .env.example  .env.production  .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DEPLOYMENT_GUIDE.md  Dockerfile  LICENSE  README.md  docker-compose.yml  start-dev.sh
.sqlx/: query-07d06a76643da8ed97fde6d56b1c24e3498a2d985dff1675cc12c4b2d49f3082.json  query-089a74f9b9e4800f20164c16e8a340b588c969c25903c41a269c49ba77aba5e0.json  query-08b0d7f4512140ffd6a9f9112a436955ff80ad09ddf5f20d19a962a8a98afd77.json  query-08d98fe4705735d45d474c827da58be2239b9f73d767ece78d023e8d56a69c00.json  query-0a76d2470291e3321650c7ca7153dc89590c446ab1bff8e536e56b5b813bad28.json  query-0c5ce8c575504c9d48772a6577586f1064a9a1410b65c91eab00457044ec5276.json  query-0de1ff556ec4dfdf14f359ae423787a680e8cb077075498402faf0c3174ccb4d.json  query-0e2ba91a9e4c095e122521b5bb1cf048cf35386b01644eb85ca0ca9923518027.json  query-121253a66f3db85b8bdc742c1b65646e45dc32dcd2617b4a8c76536edcffb7ab.json  query-14bf0e5ac19179331ac9d95316096784d18555599ccd502d4c7558a9e9151a65.json  query-159f3ac365eb536375f1dc749e3a6ea86d94701fddd4b8ac8651a2980b0dc65b.json  query-18b3894f981a55d3a2bbfa095acefbb1f3388e49dd7fc2d6153d339ede9c8a83.json  query-1c365e1628252ccc94d07d49090c8523d66894eb7d91adf625c9c6ed4b2979dd.json  query-1dbc1e6c9ea66292834d5f4b99cde3ee82797f2010f5b2598c00b43a62288ea9.json  query-29345bfc7ce5918e161ad0a3e56b1470a3c9d9b12368f2eb04dbaf9f1521aec4.json  query-2b75873959d41a6429ef434fc9c000f57461bd623c65795f6c1eae9dc8c6dc7d.json  query-2f4e543fa06e0d2283376df6f143de75aaa73f2fda89a51bee26ed5b34a0e979.json  query-307d1c53a230f28b85de78251de787c661c8ca5d955dfe643079f65bd1881739.json  query-34f6d397f7a39cdbcb6e63c4feb1c203bf23843d389bcb64b4f82e3e2d939cda.json  query-369e6b278b664ae2d0bb71fef6e821965910b4e179c54fb76e5ab81d992b24ac.json  query-3d4375dfc6187ea964235bbeb228a928360af86f3c809003e93dfe2b7cc7c351.json  query-3dba331fc9754974ea13a9c1c11caf9d32f5a79ac33d9e3e0ab7c1a105eb24cc.json  query-3f957862c34c5b9639a55d6262d55301885f2c985cd85c1214d9e5c5a6a983b8.json  query-461f22b35baefc4f691536e94bf59457040aa2c6d0c72751cd8d33d7e977f79c.json  query-46e2940801282090442aabeb1810959ca38bc160495b7d2af9dedc43d64ac3ac.json  query-48ca15616a212688ebb3b67c79339063595aac6d8942400d3497f542fdd317b9.json  (+73 more)
src/: db.rs  lib.rs  (+4 more)
(+149 files in other folders)
