[package]
name = "saramcp"
version = "0.1.0"
edition = "2021"

[lib]
name = "saramcp"
path = "src/lib.rs"

[[bin]]
name = "saramcp"
path = "src/main.rs"

[[bin]]
name = "cli"
path = "src/bin/cli.rs"

[dependencies]
# Web framework
axum = "0.8"
axum-extra = { version = "0.10", features = ["cookie"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "trace", "cors"] }

# Async runtime
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "migrate"] }

# Templates
askama = "0.14"
askama_web = { version = "0.14", features = ["axum-0.8"] }

# Session management
tower-sessions = { version = "0.14", features = ["signed"] }
tower-sessions-sqlx-store = { version = "0.15", features = ["sqlite"] }

# Security
argon2 = "0.5"
rand = "0.8"
hex = "0.4"
sha2 = "0.10"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_qs = "0.12"
serde_urlencoded = "0.7"
urlencoding = "2.1"
form_urlencoded = "1.2"

# Pattern matching
regex = "1.10"
once_cell = "1.19"

# Encryption
aes-gcm = "0.10"
base64 = "0.22"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# HTTP client
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# Email
lettre = { version = "0.11", features = ["builder", "tokio1-native-tls", "smtp-transport"], default-features = false }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Environment variables
dotenvy = "0.15"

# Time
time = "0.3"
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1.7", features = ["v4", "serde"] }

# CLI
clap = { version = "4.5", features = ["derive"] }
rpassword = "7.3"

# Test utilities
tempfile = "3.10"

# MCP Server
rmcp = { version = "0.8", features = ["server", "transport-sse-server", "macros"] }
tokio-util = "0.7"

[dev-dependencies]
# Testing
mockall = "0.12"
tower = { version = "0.5", features = ["util"] }
rmcp = { version = "0.8", features = ["server", "transport-sse-server", "macros"] }
tokio-util = "0.7"
wiremock = "0.6"
serial_test = "3.2"

[features]
default = []
